--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>My web page</title>
@@ -11,3 +11,4 @@
         </p>
     </body>
 </html>
+ -->
