--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
         <title>My web page</title>
@@ -11,7 +11,7 @@
         </p>
     </body>
 </html>
- -->
+
 <!-- <div class="container">
   <div class="slice"></div>
   <div class="slice"></div>
@@ -186,7 +186,7 @@
 </style>
 
  --> 
- <!DOCTYPE html>
+<!--  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -374,4 +374,4 @@
     <div class="slice"></div>
   </div>
 </body>
-</html>
+</html> -->
